Started to implement screen resizing.

--- a/html/src/main/webapp/DragonsGame.html
+++ b/html/src/main/webapp/DragonsGame.html
@@ -2,8 +2,19 @@
 <html>
   <head>
     <title>DragonsGame</title>
+    <style>
+      html, body {
+        height: 100%;
+        margin: 0;
+      }
+     
+      #playn-root {
+        min-height:100%
+      }
+    </style>
   </head>
   <body bgcolor="black">
     <script src="dragons/dragons.nocache.js"></script>
+    <div id="playn-root"></div>
   </body>
 </html>
